@@ -1,7 +1,7 @@
 package fr.cotedazur.univ.polytech.startingpoint;
 
 import java.util.*;
-import java.util.stream.Collectors;
+
 
 public class CerveauLivraison extends Cerveau {
     int i=0;
@@ -38,7 +38,7 @@ public class CerveauLivraison extends Cerveau {
     }
 
     private Action getMaxBambous(Jeu jeu, Action derniere) {
-        List<Parcelle>parcellesAvecUneSection= jeu.getParcellesPlacees().stream().filter(p->p.getTaille()>=1).collect(Collectors.toList());
+        List<Parcelle>parcellesAvecUneSection= jeu.getParcellesPlacees().stream().filter(p->p.getTaille()>=1).toList();
         parcellesAvecUneSection= jeu.getPanda().deplacementsPossibles(parcellesAvecUneSection);
         if(!parcellesAvecUneSection.isEmpty())
         {Action newAction=new ActionPanda(parcellesAvecUneSection.get(0));
@@ -49,7 +49,7 @@ public class CerveauLivraison extends Cerveau {
 
     private Action seFocaliser(Jeu jeu, Action derniere) {
         List<Objectif> objectifBambou = joueur.getCartesObjectifs();
-        objectifBambou = objectifBambou.stream().filter(o->o.getType().equals(Type.TypePanda.getNomType())).collect(Collectors.toList()).subList(0,2);
+        objectifBambou = objectifBambou.stream().filter(o->o.getType().equals(Type.TYPE_PANDA.getNomType())).toList().subList(0,2);
         List<Bambou>bambousJoueur=new ArrayList<>(joueur.getPlateau().getBambous());
         if(!objectifBambou.isEmpty() && (objectifBambou.size() >= 2)){
             ObjectifPanda obj=(ObjectifPanda) objectifBambou.get(i%2);
